# exercise-fom-ai-bi

./: .gitignore  README.md  pyproject.toml
exercises/: 01-KNN.ipynb  02-KMEANS.ipynb  03_DBSCAN.ipynb  04-RF_XGBOOST.ipynb  05-MLP_Classification_Adult_Income.ipynb  05-MLP_Classification_Adult_Income_code.txt  06-MLP_Regression_California_Housing.ipynb  06-MLP_Regression_California_Housing_code.txt  07-FastAI_CNN-Transfer_Learning.ipynb  07-FastAI_CNN-Transfer_Learning_code.txt  08-CNN_CIFAR-10_with_AlexNet.ipynb  08-CNN_CIFAR-10_with_AlexNet_code.txt
solutions/: 01-KNN.ipynb  02-KMEANS.ipynb  03_DBSCAN.ipynb  04-RF_XGBOOST.ipynb  05-MLP_Classification_Adult_Income.ipynb  06-MLP_Regression_California_Housing.ipynb  07-FastAI_CNN-Transfer_Learning.ipynb  08-CNN_CIFAR-10_with_AlexNet.ipynb
